defined Favorite in swagger.json and started postFavorite
