# src/server/controllers/users.ts
@@ -6,11 +6,8 @@ import db = require('../db')
 import api = require('../api')
 import UserInfo = db.UserInfo
 import mongodb = require('mongodb')
-<<<<<<< HEAD
-=======
 
 import bcrypt = require('bcryptjs')
->>>>>>> e35c727c0aa0ac7bfcbd1d2793374e3baa9e8ee8
 
 const inspect = (input: any) => util.inspect(input, false, Infinity, true)
 
@@ -38,52 +35,6 @@ module.exports.signup = function (req: api.Request & swaggerTools.Swagger20Reque
 	const sent_username = req.swagger.params.userinfo.value.username;
 	const sent_password = req.swagger.params.userinfo.value.password;
 
-<<<<<<< HEAD
-	/* first check if user exists */
-	db.users.findOne({'username' : sent_username}).then((user) => {
-		if (user) {
-			res.status(api.OK)
-			res.send(JSON.stringify({message: "Username already in use."}))
-			res.end()
-		} else {
-
-			/* do all the fields for new user. */
-			const new_user_to_make = {
-				_id: new mongodb.ObjectID(),
-				username: sent_username,
-				password: sent_password,
-				admin: false,
-				email: "",
-				banned: false,
-				warned: false,
-				numReports: 0,
-				numWarnings: 0,
-				messageCreatedCount: 0,
-				messageDiscoveredCount: 0,
-				accountCreated: "",
-				lastLogin: ""
-			}
-
-			/* attempt to insert new user */
-			db.users.insertOne(new_user_to_make).then((success) => {
-				if (success) {
-					if (req.session) {
-						req.session.username = new_user_to_make.username;
-						req.session.userid = ""+new_user_to_make._id;
-						req.session.admin = new_user_to_make.admin;
-					}
-
-					res.status(api.OK)
-					res.send(JSON.stringify({message: "Yeet brochacho. New user yote."}))
-					res.end()
-				} else {
-					res.status(api.InternalServerError)
-					res.send(JSON.stringify({message: "Error occurred. Rip in peace."}))
-					res.end()
-				}
-			})
-		}
-=======
 	bcrypt.hash(sent_password, 10).then((password_hash) => {
 		/* first check if user exists */
 		db.users.findOne({ 'username': sent_username }).then((user) => {
@@ -130,40 +81,20 @@ module.exports.signup = function (req: api.Request & swaggerTools.Swagger20Reque
 				})
 			}
 		})
->>>>>>> e35c727c0aa0ac7bfcbd1d2793374e3baa9e8ee8
 	})
 }
 
 module.exports.userLogin = function (req: api.Request & swaggerTools.Swagger20Request<LoginPayload>, res: any, next: any) {
     console.log(inspect(req.swagger.params))
-<<<<<<< HEAD
-    res.setHeader('Content-Type', 'application/json')
-=======
 	res.setHeader('Content-Type', 'application/json')
 
 	const bad_user_pass_msg = "Error: username or password doesn't match."
->>>>>>> e35c727c0aa0ac7bfcbd1d2793374e3baa9e8ee8
 
 	/* alias sent params */
 	const sent_username = req.swagger.params.userinfo.value.username;
 	const sent_password = req.swagger.params.userinfo.value.password;
 
 	db.users.findOne({username: sent_username}).then((user) => {
-<<<<<<< HEAD
-		if (user && user.password == sent_password) {
-			if (req.session) {
-				req.session.username = sent_username
-				req.session.userid = ""+user._id
-				req.session.admin = user.admin
-			}
-
-			res.status(api.OK)
-			res.send(JSON.stringify({message: "All good broseph. You're in."}))
-			res.end()
-		} else {
-			res.status(api.InternalServerError)
-			res.send(JSON.stringify({message: "Error: username or password doesn't match."}))
-=======
 		if (user) {
 			bcrypt.compare(sent_password, user.password).then((is_correct_password) => {
 				if (is_correct_password) {
@@ -185,7 +116,6 @@ module.exports.userLogin = function (req: api.Request & swaggerTools.Swagger20Re
 		} else {
 			res.status(api.Forbidden)
 			res.send(JSON.stringify({message: bad_user_pass_msg}))
->>>>>>> e35c727c0aa0ac7bfcbd1d2793374e3baa9e8ee8
 			res.end()
 		}
 	})
