# src/server/swagger.json
@@ -485,7 +485,7 @@
 				}
 			}
 		},
-		"/favorite/{id}": {
+		"/favorite": {
 			"delete": {
 				"x-swagger-router-controller": "favorites",
 				"operationId": "deleteFavorite",
@@ -495,10 +495,12 @@
 				"description": "Delete a favorite.",
 				"parameters": [
 					{
-						"in": "path",
-						"name": "id",
+						"in": "body",
+						"name": "favorite",
 						"required": true,
-						"type": "string"
+						"schema": {
+							"$ref": "#/definitions/Favorite"
+						}
 					}
 				],
 				"responses": {
@@ -525,10 +527,12 @@
 				"description": "Create a new favorite.",
 				"parameters": [
 					{
-						"in": "path",
-						"name": "id",
+						"in": "body",
+						"name": "favorite",
 						"required": true,
-						"type": "string"
+						"schema": {
+							"$ref": "#/definitions/Favorite"
+						}
 					}
 				],
 				"responses": {
@@ -753,6 +757,36 @@
 					},
 					"required": [
 						"creator"
+					]
+				},
+				{
+					"$ref": "#/definitions/ObjectID"
+				}
+			]
+		},
+		"Favorite": {
+			"type": "object",
+			"allOf": [
+				{
+					"type": "object",
+					"properties": {
+						"messageId": {
+							"$ref": "#/definitions/ObjectID"
+						}
+					},
+					"required": [
+						"messageId"
+					]
+				},
+				{
+					"type": "object",
+					"properties": {
+						"userId": {
+							"$ref": "#/definitions/ObjectID"
+						}
+					},
+					"required": [
+						"userId"
 					]
 				},
 				{
